# GitHubActions

./: .gitmodules  package-lock.json  package.json  test.py
.github/actions/test/: action.yml
.github/workflow/: condition.yml
.github/workflows/: IssuesAction.yml  PushAction.yml  TestAction.yml  application1.yml  application2.yml  artifact.yml  cache.yml  choice.yml  condition.yml  cron.yml  environment.yml  first.yml  issues.yml  mirror-image.yml  output.yml  outputs.yml  pull_request.yaml  python_script_output.yml  reusable_workflow.yml  secret.yml  startup.yml  test1.yml  test2.yml  test3.yml  testing_aws_deployment.yml  testing_function.yml  testing_reusable_workflow.yml  testing_workflow_dispatch.yml
Application 4/: main.py  pyproject.toml  requirements.txt
Application 5/: startup.py
TestApplication-2/: test.txt
